@@ -1,3 +1,4 @@
+10/20/10 add vectors to E-field detector
 10/19/10 derive negative orientation of current indicator
 10/19/10 remove polarity from current indicator, it was misused here
 10/19/10 add polarity property to battery
